2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp:
	* Number.h:
	* Number.cpp: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Primitives.h:
	* Parser.cpp:
	* Null.h:
	* UInt32.h:
	* Boolean.h:
	* UInt32.cpp:
	* Context.cpp:
	* NumberObject.h:
	* Undefined.h:
	* Addition.h:
	* Boolean.cpp:
	* Division.h:
	* LeftShift.h:
	* Remainder.h:
	* BooleanObject.h:
	* Subtraction.h:
	* Multiplication.h:
	* jsExecutionContext.cpp: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Expressions.h:
	* Parser.cpp:
	* Null.h:
	* Boolean.h:
	* GlobalObject.h:
	* NumberObject.h:
	* Boolean.cpp:
	* jsValue.cpp:
	* Undefined.h:
	* Addition.h:
	* Context.cpp:
	* BooleanObject.h:
	* jsExecutionContext.cpp:
	* VariableDeclaration.h:
	* AssignmentOperatorType.h: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Debug.h:
	* Expressions.h:
	* Object.h:
	* Null.h:
	* Parser.cpp:
	* Int32.h:
	* Function.h:
	* jsObject.h:
	* jsConstants.h:
	* Number.h:
	* String.h:
	* Boolean.h:
	* Int32.cpp:
	* jsValue.h:
	* jsString.h:
	* jsNumber.h:
	* String.cpp:
	* Number.cpp:
	* Undefined.h:
	* jsBoolean.h:
	* Boolean.cpp:
	* GlobalObject.h:
	* jsValue.cpp:
	* Addition.h:
	* Division.h:
	* NumberObject.h:
	* StringObject.h:
	* jsNumber.cpp:
	* jsString.cpp:
	* LeftShift.h:
	* BooleanObject.h:
	* Subtraction.h:
	* jsExpression.h: 

2014-06-16  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Parser.h:
	* Object.h:
	* var.h:
	* Parser.cpp:
	* jsObject.h:
	* Function.h:
	* jsConstants.h:
	* Program.h:
	* jsValue.h:
	* jsChildObject.h:
	* jsFunction.h:
	* Number.cpp:
	* String.cpp:
	* StringObject.h:
	* NumberObject.h:
	* Boolean.cpp:
	* Division.h:
	* Addition.h:
	* Remainder.h:
	* BooleanObject.h:
	* Identifier.h:
	* Subtraction.h:
	* jsExpression.h:
	* Multiplication.h:
	* AssignmentOperatorType.h:
	* jsExecutionContext.cpp:
	* VariableDeclaration.h: